# stixel

./: CMakeLists.txt
src/: ground_estimator.cpp  ground_estimator.h  hough_trans.cpp  hough_trans.h  main.cpp  stereo_colorize.cpp  stereo_colorize.h  stixel_generator.cpp  stixel_generator.h
